# reachy-mini-metronome

./: .gitignore  README.md  index.html  pyproject.toml  style.css
reachy_mini_metronome/: audio.py  main.py  midi.py  recorder.py  tracker.py
reachy_mini_metronome/static/: index.html  main.js  style.css
